--- a/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_de.properties
@@ -28,17 +28,17 @@ seconds = Sekunden
 #CBO : REMOVE connectedUsers = Angeschlossene Benutzer
 #CBO : REMOVE authorMessage = Meldung
 user = Benutzer
-#CBO : REMOVE receiver = Empf\u00E4nger
+#CBO : REMOVE receiver = Empfänger
 #CBO : REMOVE close = Schliessen
 #CBO : REMOVE send = Senden
 language = Sprache
 
 #CBO : ADD
-clear = L\u00F6schen
-save = Gespr\u00E4ch speichern
+clear = L\u00f6schen
+save = Gespr\u00e4ch speichern
 logout = Beenden
-exportDiscussion = Gespr\u00E4ch vom
-currentDiscussion = Gespr\u00E4ch
+exportDiscussion = Gespr\u00e4ch vom
+currentDiscussion = Gespr\u00e4ch
 messageTooLong = Die Mitteilung darf maximal
 nbMaxTextArea = 1240
 characters = Ziffern lang sein
