--- a/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_de.properties
@@ -24,5 +24,12 @@
 
 importExport.document = Dokument
 importExport.documents = Dokumente
-importExport.empty = Dieses Thema enth\u00E4lt keine Publikationen
+importExport.empty = Dieses Thema enth\u00e4lt keine Publikationen
 importExport.index = Zusammenfassung von
+
+//Kmax :
+importExport.criteria = SUCHKRITERIEN
+importExport.documentsIn = Dokument in
+importExport.unbalanced = Nicht klassifizierte Ver\u00f6ffentlichungen
+importExport.validate = OK
+importExport.allCategories = ........ Alle Kategorien ........
