--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-JMP.backSilverpeas = Zur\u00FCck zu Silverpeas
+JMP.backSilverpeas = Zur\u00fcck zu Silverpeas
 
 JMP.exit = Verlassen
 
@@ -31,13 +31,14 @@ JMP.feedback = Dem Administrator schreiben
 JMP.help = Hilfe
 
 JMP.tools = Tools
+JMP.clipboard = Zwischenspeicher
 
 JD = Administration
 JKM = Klassierungsplan
 JSTAT = Statistiken
 JTOOLS = Tools
 
-JDP = Benutzer und Gruppen
+JDP = Verweis
 JSPP = Bereichverwaltung
 JRP = Profil
 JMAP = Wartung
@@ -64,6 +65,6 @@ JRIFBP = FileBox+ Directory Import
 
 JMAP = Wartung
 JMAP.header1 = Gesamtverwaltung des Wartungs-Modus
-JMAP.maintenanceOnAir = Die Anwendung befindet gegenw\u00E4rtig im Wartungs-Modus....
+JMAP.maintenanceOnAir = Die Anwendung befindet gegenw\u00e4rtig im Wartungs-Modus....
 JMAP.active = Aktivieren
 JMAP.desactive = Deaktivieren
