--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
@@ -22,16 +22,16 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-myLinks.links = Meine Favoriten-Links
+myLinks.links = Meine Favoriten
 myLinks.linksByComponent = Links der Komponente
-myLinks.createLink = > Einen Favoriten-Link erstellen
-myLinks.updateLink = > Einen Favoriten-Link \u00E4ndern
-myLinks.addLink = Einen Link hinzuf\u00FCgen
+myLinks.createLink = \u003E Einen Favoriten-Link erstellen
+myLinks.updateLink = \u003E Einen Favoriten-Link \u00e4ndern
+myLinks.addLink = Einen Link hinzuf\u00fcgen
 myLinks.visible = Auf der Startseite sichtbar
 myLinks.url = URL
-myLinks.popup = In einem neuen Fenster \u00F6ffnen
+myLinks.popup = In einem neuen Fenster \u00f6ffnen
 myLinks.operation = Operationen
-myLinks.deleteLinks = Gew\u00E4hlte Links l\u00F6schen
-myLinks.deleteSelection = Sind Sie sicher, diese Auswahl l\u00F6schen zu wollen?
-myLinks.messageConfirm = Der Link ist zu Ihren Favoriten hinzugef\u00FCgt worden
-myLinks.retour = Zur\u00FCck zur Komponente
+myLinks.deleteLinks = Gew\u00e4hlte Links l\u00f6schen
+myLinks.deleteSelection = Sind Sie sicher, diese Auswahl l\u00f6schen zu wollen? 
+myLinks.messageConfirm = Der Link ist zu Ihren Favoriten hinzugef\u00fcgt worden
+myLinks.retour = Zur\u00fcck zur Komponente
