--- a/config-core/src/main/config/properties/com/silverpeas/notificationserver/channel/popup/multilang/popup_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/notificationserver/channel/popup/multilang/popup_de.properties
@@ -27,7 +27,7 @@ source = Quelle
 from = Von
 title = Titel
 name = Objekt
-delete = L\u00F6schen
+delete = L\u00f6schen
 author = Autor
 description = Meldung
 subject = Gegenstand
