--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -53,11 +53,13 @@ templateDesigner.searchAttribute = Name des zur\u00fcckgegeben Attributs
 templateDesigner.searchTypeOnly = Gibt nur die Namen der Attribute zur\u00fcck (true / false)
 templateDesigner.maxResultDisplayed  = Maximale Anzahl von zur\u00fcckgegebenen Suchergebnisse
 templateDesigner.valueFieldType = Beschr\u00e4nktes Feld (1) oder freie Suche (2)
+
 templateDesigner.driverName = Name der JDBC-Treiberklasse
 templateDesigner.url = Verbindungs URL
 templateDesigner.login = Login f\u00fcr die Verbindung zur Datenbank
 templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
+templateDesigner.suggestions = Vorschl\u00e4ge
 
 templateDesigner.addOption = Diese Option hinzuf\u00fcgen
 templateDesigner.updateOption = Diese Option \u00e4ndern
@@ -66,23 +68,25 @@ templateDesigner.defaultOption = Diese Option als Standardwert festlegen
 templateDesigner.optionText = Text
 templateDesigner.optionValue = Schl\u00fcssel
 
-templateDesigner.newFieldText = Ein 'Text'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldTextarea = Ein 'Mehrzeilentext'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldWysiwyg = Ein 'WYSIWYG'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldList = Ein 'Scroll-Listen'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldCheckbox = Ein 'Kontrollk\u00e4stchen' hinzuf\u00fcgen
-templateDesigner.newFieldRadio = Eine 'Optionsschaltfl\u00e4che' hinzuf\u00fcgen
-templateDesigner.newFieldURL = Ein 'URL'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldVideo = Ein 'Video'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldUser = Ein 'Group'-Feld hinzuf\u00fcgen
-templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00fcgen
-templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00fcgen
-templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00fcgen
-templateDesigner.newFieldSequence = Ein Feld 'Sequenz' hinzuf\u00FCgen
+templateDesigner.newFieldText = Ein \u0027Text\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldTextarea = Ein \u0027Mehrzeilentext\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldWysiwyg = Ein \u0027WYSIWYG\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldList = Ein \u0027Scroll-Listen\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldCheckbox = Ein \u0027Kontrollk\u00e4stchen\u0027 hinzuf\u00fcgen
+templateDesigner.newFieldRadio = Eine \u0027Optionsschaltfl\u00e4che\u0027 hinzuf\u00fcgen
+templateDesigner.newFieldURL = Ein \u0027URL\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldDate = Ein \u0027Datum\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldFile = Ein \u0027Datei\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldImage = Ein \u0027Bild\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldVideo = Ein \u0027Video\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldUser = Ein \u0027Benutzer\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldGroup = Ein \u0027Gruppe\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldLdap = Ein Feld \u0027LDAP-Connector\u0027 hinzuf\u00fcgen
+templateDesigner.newFieldAccessPath = Ein Feld \u0027Standort\u0027 hinzuf\u00fcgen
+templateDesigner.newFieldJdbc = Ein Feld \u0027JDBC Connector\u0027 hinzuf\u00fcgen
+
+templateDesigner.newFieldPdc = Ein \u0027KP\u0027-Feld hinzuf\u00fcgen
+templateDesigner.newFieldSequence = Ein \u0027Sequenz\u0027-Feld hinzuf\u00fcgen
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
@@ -92,19 +96,19 @@ templateDesigner.down = Nach unten
 templateDesigner.operations = Operationen
 templateDesigner.available = Verf\u00fcgbar
 
-templateDesigner.displayer.image.maxWidth = Max width
-templateDesigner.displayer.image.maxHeight = Max height
-templateDesigner.displayer.image.galleries = Galleries
-
+templateDesigner.displayer.image.maxWidth = Max Breite
+templateDesigner.displayer.image.maxHeight = Max H\u00f6he
+templateDesigner.displayer.image.galleries = Fototheken
+ 
 templateDesigner.displayer.video.width = Breite
 templateDesigner.displayer.video.height = H\u00f6he
-templateDesigner.displayer.video.autoplay = Autoplay
-
-templateDesigner.displayer.wysiwyg.width = Weite
+templateDesigner.displayer.video.autoplay = Automatische Wiedergabe
+ 
+templateDesigner.displayer.wysiwyg.width = Breite
 templateDesigner.displayer.wysiwyg.height = H\u00f6he
-
-templateDesigner.displayer.sequence.minLength = Min L\u00E4nge
-templateDesigner.displayer.sequence.startValue = Abfahrtwert
-templateDesigner.displayer.sequence.valueCreation = Wert Sch\u00f6pfung
-templateDesigner.displayer.sequence.reuseAvailableValues = Erh\u00E4ltlige Werte verwenden
-templateDesigner.displayer.sequence.alwaysIncrement = Immer erh\u00f6en
+ 
+templateDesigner.displayer.sequence.minLength = Min L\u00e4nge
+templateDesigner.displayer.sequence.startValue = Startwert
+templateDesigner.displayer.sequence.valueCreation = Wert Erzeugung
+templateDesigner.displayer.sequence.reuseAvailableValues = Wiederverwendung der verf\u00fcgbaren Werte
+templateDesigner.displayer.sequence.alwaysIncrement = Immer Inkrementieren
