--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/alertUserPeas/multilang/alertUserPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/alertUserPeas/multilang/alertUserPeasBundle_de.properties
@@ -23,5 +23,5 @@
 #
 
 AuthorMessage = Meldung
-AlertsConfirmation = Den gew\u00E4hlten Benutzern ist das Vorhandensein dieser Publikation mitgeteilt worden.
-AlertInProgress = Bitte einen Moment warten... Bearbeitung l\u00E4uft.
+AlertsConfirmation = Den gew\u00e4hlten Benutzern ist das Vorhandensein dieser Publikation mitgeteilt worden.
+AlertInProgress = Bitte einen Moment warten... Bearbeitung l\u00e4uft.
