--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainSPBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainSPBundle_de.properties
@@ -36,4 +36,4 @@ fax           = Fax
 cellularPhone = Mobiltelefonnummer
 address       = Adresse
 password      = Passwort
-passwordValid = Gültiges Passwort?
+passwordValid = G\u00fcltiges Passwort?
