--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanel/multilang/genericPanelBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanel/multilang/genericPanelBundle_de.properties
@@ -22,23 +22,22 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-
 genericPanel.usersList          = Liste der Benutzer
 genericPanel.fournisseursList   = Liste der Lieferanten
-genericPanel.acheteursList      = Liste der K\u00E4ufer
+genericPanel.acheteursList      = Liste der K\u00e4ufer
 genericPanel.adminList          = Liste der Administratoren
 genericPanel.genericList        = Liste der generischen Benutzer
 genericPanel.infoList           = Liste der Informatiker
 
 genericPanel.allUsers        = Alle Benutzer
 genericPanel.fournisseurs    = Lieferanten
-genericPanel.acheteurs       = K\u00E4ufer
+genericPanel.acheteurs       = K\u00e4ufer
 genericPanel.admin           = Administratoren
 genericPanel.genericUsers    = Generische Benutzer
 genericPanel.informatique    = Informatiker
 
-genericPanel.arttitle        = Verf\u00FCgbar
-genericPanel.artfouList      = Auswahl der hinzuzuf\u00FCgenden Artikel
+genericPanel.arttitle        = Verf\u00fcgbar
+genericPanel.artfouList      = Auswahl der hinzuzufügenden Artikel
 genericPanel.fouCode         = Lieferanten-Code
 genericPanel.reference       = Lieferanten-Referenz
 genericPanel.artid           = Gerenrische Referenz
