--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_de.properties
@@ -22,15 +22,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-
 genericPanelPeas.usersList       = Benutzer
 genericPanelPeas.searchResult    = Ergebniss
 genericPanelPeas.searchCriteres  = Suchkriterien
-genericPanelPeas.selectedNumber  = Gew\u00E4hlte Elemente
+genericPanelPeas.selectedNumber  = Gew\u00e4hlte Elemente
 
 genericPanelPeas.allUsers        = Alle Benutzer
 genericPanelPeas.fournisseurs    = Lieferanten
-genericPanelPeas.acheteurs       = K\u00E4ufer
+genericPanelPeas.acheteurs       = K\u00e4ufer
 genericPanelPeas.admin           = Administratoren
 genericPanelPeas.genericUsers    = Generische Benutzer
 genericPanelPeas.quickSelect = Schnellwahl
