--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
@@ -32,22 +32,22 @@ channelType1=E-Mail
 channelType2=SMS
 channelType3=Fenster
 channelType4=SilverMail
-channelType5=Unterdr\u00FCckung
+channelType5=Unterdr\u00fcckung
 
-defaultAddressPOPUP=<Anzeige eines Fensters>
-defaultAddressSILVERMAIL=<Benachrichtigungs-Box>
-defaultAddressREMOVE=<Automatische Unterdr\u00FCckung>
-defaultAddressSPMAIL=<Standard-E-Mail>
-defaultAddressSERVER=<Server>
+defaultAddressPOPUP=\u003CAnzeige eines Fensters\u003E
+defaultAddressSILVERMAIL=\u003CBenachrichtigungs-Box\u003E
+defaultAddressREMOVE=\u003CAutomatische Unterdr\u00fcckung\u003E
+defaultAddressSPMAIL=\u003CStandard-E-Mail\u003E
+defaultAddressSERVER=\u003CServer\u003E
 
 addressUsePro=Professionell
-addressUsePerso=Pers\u00F6nlich
+addressUsePerso=Pers\u00f6nlich
 addressUseRep=Anrufbeantworter
 addressUseUrgent=Dringlichkeit
 
 messagePriority0=Normal
 messagePriority1=Dringend
-messagePriority2=Funktionsst\u00F6rung
+messagePriority2=Funktionsst\u00f6rung
 
 subject=Gegenstand
 From=Von
@@ -56,6 +56,6 @@ testMsgTitle=Benachrichtigungs-Testmeldung
 testMsgBody=Dies ist der Hauptteil der Meldung...
 testMsgFrom=silverpeas@silverpeas.com
 
-guestNotAllowedTitle=Benachrichtigung unm\u00F6glich!
-guestNotAllowedBody1=Senden der Benachrichtigung unm\u00F6glich:
-guestNotAllowedBody2=Leider k\u00F6nnen Sie als Eingeladene(r) keine Benachrichtigunhg senden.
+guestNotAllowedTitle=Benachrichtigung unm\u00f6glich!
+guestNotAllowedBody1=Senden der Benachrichtigung unm\u00f6glich: 
+guestNotAllowedBody2=Leider k\u00f6nnen Sie als Eingeladene(r) keine Benachrichtigunhg senden.
