--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
@@ -27,25 +27,25 @@
 #
 
 fixColWidth = Spaltenbreite festlegen
-addAColumn = Eine Spalte hinzuf\u00FCgen
+addAColumn = Eine Spalte hinzuf\u00fcgen
 saveChanges = Speichern
-revert = Zur\u00FCck zur vorhergehenden Version
+revert = Zur\u00fcck zur vorhergehenden Version
 
 title = Titel
 method = Mittel
 notif_type = Benachrichtigungsart
-users_dest = Empf\u00E4nger (Benutzer)
-groups_dest = Empf\u00E4nger (Gruppen)
-users_avail = Verf\u00FCgbare Benutzer
-groups_avail = Verf\u00FCgbare Gruppen
-selected = Gew\u00E4hlte
+users_dest = Empf\u00e4nger (Benutzer)
+groups_dest = Empf\u00e4nger (Gruppen)
+users_avail = Verf\u00fcgbare Benutzer
+groups_avail = Verf\u00fcgbare Gruppen
+selected = Gew\u00e4hlte
 
-Opane_addressees = Empf\u00E4nger zuweisen
+Opane_addressees = Empf\u00e4nger zuweisen
 
-BBar_addressees = Empf\u00E4nger
+BBar_addressees = Empf\u00e4nger
 
 missingFieldStart = Das Feld '
-missingFieldEnd = ' muss ausgef\u00FCllt werden
+missingFieldEnd = ' muss ausgef\u00fcllt werden
 
 manualNotification = Manuelle Benachrichtigung
 name = Gegenstand
@@ -61,12 +61,12 @@ description = Meldung
 method = Mittel
 importance = Wichtigkeit
 users = Benutzer
-addressees = Empf\u00E4nger
+addressees = Empf\u00e4nger
 assigner = Zuweisen
 
 domainName = Benachrichtigen
 
-DefaultMedia = <Standard-Methode>
+DefaultMedia = \u003CStandard-Methode\u003E
 
 MesNotifications = Meine Benachrichtigungen
 ParametrerNotification = Parametrisierung
@@ -76,7 +76,7 @@ Notifier = Senden einer Benachrichtigung
 //------------------------------------------------------------------------------------//
 //                  A mettre \u00E0 jour dans le multilang general                         //
 //------------------------------------------------------------------------------------//
-Select = W\u00E4hlen Sie
+Select = W\u00e4hlen Sie
 Validate = OK
 Cancel = Abbrechen
 Close = Schliessen
