--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_de.properties
@@ -31,4 +31,6 @@ EndOfSessionNotificationMsgTitle = Ende der Sitzung um
 EndOfSessionNotificationMsgText = Ohne Ihre Antwort wird das System Ihre Sitzung beenden!
 administrator = Administrator
 passwordExpirationAlert = Der Ablauf Ihres Passwortes steht unmittelbar bevor
-passwordExpirationMessage = Ihr Passwort wird bald ablaufen. \u00C4ndern Sie es bitte sobald wie m\u00F6glich.
+passwordExpirationMessage = Ihr Passwort wird bald ablaufen. \u00C4ndern Sie es bitte sobald wie m\u00f6glich.
+badCredentials=Falsches Passwort
+invalidAnswer=Falsche Antwort
