--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
@@ -22,7 +22,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-
 selectionPeas.usersList       = Benutzer
 selectionPeas.groupsList      = Gruppen
 
@@ -33,19 +32,19 @@ selectionPeas.helpBrowse        = In der Baumstruktur surfen
 selectionPeas.helpSearchElement = Einen Benutzer suchen
 selectionPeas.helpSearchSet     = Eine Gruppe suchen
 selectionPeas.helpCart          = Den Einkaufskorb zeigen
-selectionPeas.removeFromCart    = Die gew\u00E4hlten Elemente l\u00F6schen
-selectionPeas.removeAllFromCart = Alle Elemente l\u00F6schen
-selectionPeas.confirmRemoveFromCart    = Sind Sie sicher, die gew\u00E4hlten Elemente im Einkaufskorb l\u00F6schen zu wollen?
-selectionPeas.confirmRemoveAllFromCart = Sind Sie sicher, alle Elemente im Einkaufskorb l\u00F6schen zu wollen?
+selectionPeas.removeFromCart    = Die gew\u00e4hlten Elemente l\u00f6schen 
+selectionPeas.removeAllFromCart = Alle Elemente l\u00f6schen
+selectionPeas.confirmRemoveFromCart    = Sind Sie sicher, die gew\u00e4hlten Elemente im Einkaufskorb l\u00f6schen zu wollen?
+selectionPeas.confirmRemoveAllFromCart = Sind Sie sicher, alle Elemente im Einkaufskorb l\u00f6schen zu wollen?
 
 selectionPeas.searchResult    = Ergebniss
 selectionPeas.searchCriteres  = Suchkriterien
-selectionPeas.selectedNumber  = Gew\u00E4hlte Elemente
+selectionPeas.selectedNumber  = Gew\u00e4hlte Elemente
 selectionPeas.quickSelect = Schnellwahl
 selectionPeas.filter = Filter
 
-selectionPeas.selectAll = Alle W\u00E4hlen
-selectionPeas.unSelectAll = Ganze Wahl r\u00FCckg\u00E4ngig machen
+selectionPeas.selectAll = Alle W\u00e4hlen
+selectionPeas.unSelectAll = Ganze Wahl r\u00fcckg\u00e4ngig machen
 
 selectionPeas.rootName = Stamm
 selectionPeas.usersAll = Benutzer  
@@ -53,11 +52,13 @@ selectionPeas.usersOfGroup = Benutzer der Gruppe
 selectionPeas.groupsAll = "Stamm"-Gruppen 
 selectionPeas.groupsOfGroup = Untergruppen von  
 
-selectionPeas.groupsOfUser = Zugeh\u00F6rigkeitsgruppen
+selectionPeas.groupsOfUser = Zugeh\u00f6rigkeitsgruppen
 selectionPeas.directUsersOfGroup = Benutzer
 selectionPeas.groupParent = \u00DCbergeordnete Gruppe
 
-selectionPeas.selectedGroups = Gew\u00E4hlte Gruppen
-selectionPeas.selectedUsers = Gew\u00E4hlte Benutzer
+selectionPeas.selectedGroups = Gew\u00e4hlte Gruppen
+selectionPeas.selectedUsers = Gew\u00e4hlte Benutzer
 
 selectionPeas.domain = Domain
+
+selectionPeas.inProgress = Daten werden verarbeitet! <br/> Bitte warten...
