--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_de.properties
@@ -36,13 +36,18 @@ SaveAndExit = Sichern und verlassen
 
 # For Website only
 ErreurmPrefix = Sie haben keinen Wert in das Feld eingegeben 
-ErreurFichierUpload = Fehler, es k\u00F6nnen nur statische HTML-Seiten oder Bilder hinaufgeladen werden
+ErreurFichierUpload = Fehler, es k&#x00f6nnen nur statische HTML-Seiten oder Bilder hinaufgeladen werden 
 FichierUpload = Bild zum Hinaufladen
 ErreurmSuffix = Dieser Wert muss eingegeben werden. 
 NameFile = Der Name der Datei
 MustNotContainSpecialChar = darf die folgenden Zeichen nicht enthalten: 
-Char7 = & ; + % # ' \u00B2 \u00E9 \u00E8 \u00E7 \u00E0 ^ \u00F9 \u00B0 \u00A8 \u00A3 \u00B5 \u00A7 \u00A4
+Char7 = & ; + % # ' \u00B2 \u00E9 \u00E8 \u00E7 \u00E0 \u005E \u00F9 \u00B0 \u00A8 \u00A3 \u00B5 \u00A7 \u00A4
 RequiredField = Obligatorisch
 UploadTitle = Datei 
 Valider = OK
 Annuler = Abbrechen
+DynamicValues = W\u00e4hlen Sie ein Stichwort
+storageFile.select.title = Verf\u00fcgbare Dateien
+storageFile.home.title = Verwaltung der Verkn\u00fcpfungen zu den Anh\u00e4ngen
+storageFile.home.description = Bitte benutzen Sie das linke Men\u00fc um Anh\u00e4nge zu sehen..
+storageFile.icon.alt= Anh\u00e4nge Einf\u00fcgen
