--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
@@ -23,8 +23,8 @@
 #
 
 adminConsol = Administration
-MyPDCSubscriptions = Meine Favoriten-Anforderungen
-NoPDCSubscriptions = Keine Favoriten-Anforderung!
+MyPDCSubscriptions = Meine Lieblingsanforderungen
+NoPDCSubscriptions = Keine Lieblingsanforderungen!
 Administration = Administration
 AdministrationPortlet = Portlet-Administration
 AdministrationPdc = Klassierungsplan
@@ -32,14 +32,14 @@ AdministrationStat = Statistiken
 
 SpaceEntreprise = Unternehmens-Bereich
 SpaceCollaboration = Kollaborative Bereiche
-SpacePersonal = Pers\u00F6nlicher Bereich
+SpacePersonal = Pers\u00f6nlicher Bereich
 Component = Dienst
 AxisCollaboration = Kategorien von
 AxisEmpty = kein PDC
 
-Choose = W\u00E4hlen Sie...
-FavRequests = Meine Favoriten-Anforderungen
-FavLinks = Meine Favoriten-Links
+Choose = W\u00e4hlen Sie...
+FavRequests = Meine Lieblingsanforderungen
+FavLinks = Meine Favoriten
 Directory = Verzeichnis
 Mail = Meine Benachrichtigungen
 ToDo = Meine Tasks
@@ -48,11 +48,11 @@ Workflow = Arbeitsablauf
 NotifyUser = Benachrichtigen
 NotificationBox = Meine Benachrichtigungen lesen
 MyInterestCenters = Meine Abonnemente
-LatestPublications = Die * letzten Ver\u00F6ffentlichungen
+LatestPublications = Die * letzten Ver\u00f6ffentlichungen
 QuickInfos = QuickInfos
-FileSharing = Meine tickets
-WebConnections = Meine connections
-ScheduleEvent = Finden Sie eine Datum
+FileSharing = Meine Tickets
+WebConnections = Meine Verbindungen
+ScheduleEvent = Ein Datum finden
 
 HelpLaunchIE = Hilfe zum Starten der Tools
 HelpLaunchIEPage = HelpLaunchIE_fr.jsp
@@ -71,7 +71,7 @@ Feedback = Dem Administrator schreiben
 MyMap = Sitemap anzeigen
 Exit = Verlassen
 Help = Hilfe
-Personalization = Mein Profil
+Personalization = Personaliseren
 Clipboard = Zwischenspeicher
 
 NewMessages = neue Meldungen
@@ -83,7 +83,7 @@ ThinkTo = Denken an
 NoTodos = Keine Task programmiert!
 MyFavorites = Meine Favoriten
 NoFavorites = Kein Favorit festgelegt!
-MyNextEvent = Meine n\u00E4chsten Rendezvous
+MyNextEvent = Meine n\u00e4chsten Rendezvous
 today = Heute
 tomorrow = Morgen
 MyAttachment = Meine reservierten Dateien
@@ -96,14 +96,14 @@ ErrorDB = Fehler mit der Datenbank!
 ErrorEJBFinder = Angegebenes Objekt kann nicht gefunden werden!
 ErrorEJBCreation = Problem bei der EJB-Erstellung!
 ErrorObjectNotFound = Das Element, das Sie erreichen wollen, gibt es nicht mehr!
-ErrorObjectManipulation = Das Element, das Sie handhaben wollen, ist konkurrierend ge\u00E4ndert worden, allf\u00E4llige von Ihnen angebrachte \u00C4nderungen wurden nicht gespeichert!
+ErrorObjectManipulation = Das Element, das Sie handhaben wollen, ist konkurrierend ge\u00e4ndert worden, allf\u00e4llige von Ihnen angebrachte \u00C4nderungen wurden nicht gespeichert!
 ErrorUnknown = Unerwartetes Problem aufgetreten!
 Error = Ein Fehler ist aufgetreten
-RequestUncomplete = Ihre Anfrage kann nicht erf\u00FCllt werden.
+RequestUncomplete = Ihre Anfrage kann nicht erf\u00fcllt werden.
 ErrorTransmitAdmin = Leiten Sie diese Fehlermeldung an Ihren Administrator weiter.
 Thanks = Danke.
-BackToMainPage = Zur\u00FCck zur Hauptseite
-BackToMainPageSpace = Zur\u00FCck zur Haupseite des Bereichs
+BackToMainPage = Zur\u00fcck zur Hauptseite
+BackToMainPageSpace = Zur\u00fcck zur Haupseite des Bereichs
 
 
 navigationView = Browsen
@@ -113,9 +113,9 @@ bySpace = Pro Bereich
 reductExtend = Reduzieren / Ausweiten
 
 homePage.feedback = Dem Administrator schreiben
-homePage.loginBack = Zur\u00FCck zur Identifikationsseite
+homePage.loginBack = Zur\u00fcck zur Identifikationsseite
 homePage.maintenanceOn = Ihre Anwendung wird momentan gewartet.
-homePage.spaceMaintenanceOn = Der Bereich wird momentan gewartet.
+homePage.spaceMaintenanceOn = Bereich wird momentan gewartet.
 
 glossaire = Glossar
 
@@ -124,7 +124,7 @@ notification.source = Quelle
 notification.from = Von
 notification.url = URL
 notification.subject = Gegenstand
-BackToPersonalMainPage = Empfang des pers\u00F6nlichen Bereichs
+BackToPersonalMainPage = Empfang des pers\u00f6nlichen Bereichs
 
 # Login Page
 storePassword = Passwort speichern?
