--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -21,11 +21,48 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-comment.add = Hinzuf\u00FCgen
-comment.suppressionConfirmation = Sind Sie sicher, folgendes l\u00F6schen zu wollen kommentar ?
-comment.comment = Kommentar
-comment.pleaseFill_single = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen.
-comment.champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
+
+add = Hinzuf\u00fcgen
+author = Herausgeber
+c_comment = Kommentar
+created = Erstellt
+modified = Ge\u00e4ndert
+modify = \u00C4ndern
+delete = L\u00f6schen
+suppressionConfirmation = Sind Sie sicher, folgendes l\u00f6schen zu wollen:
+type = Typ
+name = Name
+version = Version
+date = Datum
+status = Status
+creator = Ersteller
+description = Beschreibung
+comments = Kommentare
+comment = Kommentar
+comment.add = Kommentar hinzuf\u00fcgen
+lockedBy = Gesperrt durch
+free = Frei
+ok = OK
+cancel = Abbrechen
+alt = Gesperrt durch
+checkIn = Check-in
+checkOut = Check-out
+addNewVersion = Erstellen einer neuen Version
+newDocumentVersion = Neue Version des Dokumentes
+new_document = Neues Dokument
+browse = Browsen
+typeOfVersion = Typ der Version
+public = &Ouml;ffentlich
+archive = Archiv
+required = obligatorisch
+document = Dokument
+nomVide = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
+pleaseFill = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen
+pleaseFill_single = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen.
+
+// erreurs
+erreur = Fehler
+champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
 
 comment.DAO_NoClosedStatment = Das " Statement " kann nicht geschlossen werden
 comment.EJB_NoClosedConnection = Die Verbindung zur Datenbank kann nicht geschlossen werden
@@ -37,9 +74,9 @@ comment.EJB_NoConnection = Die Verbindung zur Datenbank kann nicht geschlossen w
 comment.AC_NoInitcommentHome = Die Home-Schnittstellen-Komponente kann nicht erhalten werden
 comment.AC_NoCreatecommentDetail = Der Kommentar kann nicht erstellt werden
 comment.AC_NoFindAttachementDetail = Der Kommentar kann nicht gefunden werden
-comment.AC_NoDeletecommentDetail = Der Kommentar kann nicht gel\u00F6scht werden
+comment.AC_NoDeletecommentDetail = Der Kommentar kann nicht gel\u00f6scht werden
 comment.AC_NoCreatePath = Ein Kontext kann nicht erstellt werden
-comment.AC_NoDeletePath = Ein Kontext kann nicht gel\u00F6scht werden
-comment.AC_NoDeleteOnServer = die Dateien k\u00F6nnen nicht vom Server gel\u00F6scht werden
+comment.AC_NoDeletePath = Ein Kontext kann nicht gel\u00f6scht werden
+comment.AC_NoDeleteOnServer = die Dateien k\u00f6nnen nicht vom Server gel\u00f6scht werden
 comment.AC_NoCreateIndex = die Datei wird von der Suchmaschine nicht indexiert
 comment.AC_NoDeleteIndex = die Datei wird von der Suchmaschine immer indexiert
