--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_de.properties
@@ -24,9 +24,9 @@
 
 notification.title = Versionisierungs-Benachrichtigung
 
-notification.refuseWork    = Ihre Version des Dokumentes ist vom Best\u00E4tiger abgelehnt worden!
-notification.processWork   = Sie k\u00F6nnen mit dem Dokument weiterfahren
-notification.workValidated = Ihre Version des Dokumentes ist best\u00E4tigt worden!
+notification.refuseWork    = Ihre Version des Dokumentes ist vom Best\u00e4tiger abgelehnt worden!
+notification.processWork   = Sie k\u00f6nnen mit dem Dokument weiterfahren
+notification.workValidated = Ihre Version des Dokumentes ist best\u00e4tigt worden!
 notification.pleaseValidate = Bitte das Dokument genehmigen!
 
 versioning.DocumentName = Dokument
@@ -45,15 +45,15 @@ versioning.EJB_NoConnection = Die Verbindung zur Datenbank kann nicht geschlosse
 versioning.AC_NoInitVersioningHome = Die Home-Schnittstellen-Komponente kann nicht erhalten werden
 versioning.AC_NoCreateVersioningDetail = Die Versionisierung kann nicht erstellt werden
 versioning.AC_NoFindAttachementDetail = Die Versionisierung kann nicht gefunden werden
-versioning.AC_NoDeleteVersioningDetail = Die Versionisierung kann nicht gel\u00F6scht werden
+versioning.AC_NoDeleteVersioningDetail = Die Versionisierung kann nicht gel\u00f6scht werden
 versioning.AC_NoCreatePath = Der Kontext kann nicht erstellt werden
-versioning.AC_NoDeletePath = Der Kontext kann nicht gel\u00F6scht werden
-versioning.AC_NoDeleteOnServer = Die Dateien k\u00F6nnen nicht vom Server gel\u00F6scht werden
+versioning.AC_NoDeletePath = Der Kontext kann nicht gel\u00f6scht werden
+versioning.AC_NoDeleteOnServer = Die Dateien k\u00f6nnen nicht vom Server gel\u00f6scht werden
 versioning.AC_NoCreateIndex = die Datei wird von der Suchmaschine nicht indexiert
 versioning.AC_NoDeleteIndex = die Datei wird von der Suchmaschine immer indexiert
 
 versioning.notifSubject = Mitteilung
 versioning.notifName = Die Datei ist reserviert
-versioning.notifUserInfo = Reservierung l\u00E4uft morgen ab
+versioning.notifUserInfo = Reservierung l\u00e4uft morgen ab
 versioning.notifUserAlert = Reservierung ist bald abgelaufen
 versioning.notifUserLib = Wurde freigegeben
