--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -23,19 +23,19 @@
 #
 
 //erreurs
-ContainsTooLargeText = darf nicht \u00FCbersteigen
+ContainsTooLargeText = darf nicht \u00fcbersteigen 
 Characters = Zeichen
 
-userPanel = Einen Benutzer w\u00E4hlen
+userPanel = Einen Benutzer w\u00e4hlen
 clearUser = Feld reinitialisieren
 
-groupPanel = Select a group
-clearGroup = Feld reinitialisieren
+groupPanel = W\u00e4hlen Sie eine Gruppe
+clearGroup = Feld zur\u00fccksetzen
 
-removeFile = Datei l\u00F6schen
-removeImage = Bild l\u00F6schen
+removeFile = Datei l\u00f6schen
+removeImage = Bild l\u00f6schen
 
-SelectValue = Einen bedeutung ausw\u00E4hlen
+SelectValue = Wert ausw\u00e4hlen
 
 // filtres
 eq =
@@ -43,7 +43,7 @@ le = (vor dem)
 ge = (nach dem)
 
 //Wysiwyg
-FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00E4nglich
+FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00e4nglich 
 FormatText = Text in welcher Schriftart formatiert? 
 FormatColor = Text in welcher Farbe formatiert? 
 Paragraph = Abschnitt
@@ -55,49 +55,49 @@ Heading4 = Titel 4 <H4>
 Heading5 = Titel 5 <H5>
 Heading6 = Titel 6 <H6>
 Pre = Formatiert <PRE>
-ClearFormatting = Formatierung l\u00F6schen
+ClearFormatting = Formatierung l\u00f6schen 
 Font = Schrift
 Other = Andere
-Size = Gr\u00F6sse
+Size = Gr\u00f6sse
 Color = Farbe
 WYSIWYG = Normal-Modus
 HTML = HTML-Modus 
-RemoveHtmlTags = Folgende HTML-Tags l\u00F6schen und best\u00E4tigen:
+RemoveHtmlTags = Folgende HTML-Tags l\u00f6schen und best\u00e4tigen: 
 RememberHtml = Im HTML-Modus darauf achten, zu ersetzen  
-Brackets = die Tags < und > durch &lt; und &gt; 
+Brackets = die Tags \u003C und \u003E durch &lt\u003B und &gt\u003B
 Bold = Fett
 Italic = Kursiv
 Underline = Unterstrichen
-LeftJustify = Linksb\u00FCndig
+LeftJustify = Linksb\u00fcndig
 CenterJustify = Zentriert
-RightJustify = Rechtsb\u00FCndig
+RightJustify = Rechtsb\u00fcndig
 OrderedList = Nummerierung
-UnorderedList = Aufz\u00E4hlungszeichen
+UnorderedList = Aufz\u00e4hlungszeichen
 RemoveIndent = Einzug verkleinern
-Indent = Einzug vergr\u00F6ssern
+Indent = Einzug vergr\u00f6ssern
 Hyperlink = Hypertext-Link
 LienURL = Ein Link zu einem URL muss hier angegeben werden 
 URL = URL 
-PageTropGrosse = Fehler, das WYSIWYG-Feld enth\u00E4lt zu viele Zeichen, um gesichert werden zu k\u00F6nnen.
-ErreurScript = Fehler, Ihr HTML-Code enth\u00E4lt Scripts. Nur statische Seiten (ohne Script) sind zul\u00E4ssig.
+PageTropGrosse = Fehler, das WYSIWYG-Feld enth\u00e4lt zu viele Zeichen, um gesichert werden zu k\u00f6nnen. 
+ErreurScript = Fehler, Ihr HTML-Code enth\u00e4lt Scripts. Nur statische Seiten (ohne Script) sind zul\u00e4ssig.
 Script = darf keine Scrips enthalten.
 Black = Schwarz
 Brown = Rotbraun
-DarkGreen = Dunkelgr\u00FCn
-Green = Gr\u00FCn
-Olive = Olivengr\u00FCn
+DarkGreen = Dunkelgr\u00fcn
+Green = Gr\u00fcn
+Olive = Olivengr\u00fcn
 Navy = Dunkelblau
 Purple = Purpurrot
 Gray = Grau
 Silver = Silbergrau
 Red = Rot
 DarkRed = Dunkelrot
-FluoGreen = Fluo-Gr\u00FCn
+FluoGreen = Fluo-Gr\u00fcn
 Yellow = Gelb
 Blue = Blau
 Fuchsia = Pink
-Turquoise = T\u00FCrkis
+Turquoise = T\u00fcrkis
 White = Weiss
 
 form.Extra = Weitere Informationen
-form.field.file.toolong = muss eine Datei, deren Name darf nicht länger als 100 Zeichen sein.
+form.field.file.toolong = muss eine Datei sein, dessen Name nicht mehr als 100 Zeichen enthalten darf.
