--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-JSPP.BackToMainSpacePage = Zur\u00FCck zu Hauptseite des Bereichs
+JSPP.BackToMainSpacePage = Zur\u00fcck zu Hauptseite des Bereichs
 
 JSPP.homepageType = Startseiten-Typ
 
 JSPP.main = Silverpeas-Startseite
-JSPP.manageHomePage = R\u00E4ume
+JSPP.manageHomePage = R\u00e4ume
 
 JSPP.peas = Service
 JSPP.portlet = Portlet
@@ -41,13 +41,13 @@ JSPP.updateHomePage = Startseite
 
 JSPP.SpaceTemplate = Bereichvorlagen
 JSPP.NoTemplate = Leerbereich
-JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer w\u00E4hlen
+JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer w\u00e4hlen
 
 JSPP.welcome =  Willlommen im Bereichverwaltungs-Modul
 
 JSPP.maintenanceTout = Silverpeas befindet sich gesamthaft im Wartungs-Modus!
 JSPP.maintenance = Wartungs-Modus:
-JSPP.maintenanceStatus = Dieser Bereich befindet sich gegenw\u00E4rtig
+JSPP.maintenanceStatus = Dieser Bereich befindet sich gegenw\u00e4rtig
 JSPP.maintenanceTxtModeOn = im Wartungs-Modus...
 JSPP.maintenanceModeOn = Aktiv
 JSPP.maintenanceModeOff = Deaktiviert
@@ -55,46 +55,48 @@ JSPP.maintenanceModeToOn = Wartungs-Modus aktivieren
 JSPP.maintenanceModeToOff = Wartungs-Modus deaktivieren
 
 JSPP.ProfilePanelCreateTitle = Rollen festlegen
-JSPP.ProfilePanelModifyTitle = Rolle \u00E4ndern
-JSPP.ProfilePanelDeleteTitle = Rolle l\u00F6schen
+JSPP.ProfilePanelModifyTitle = Rolle \u00e4ndern
+JSPP.ProfilePanelDeleteTitle = Rolle l\u00f6schen
 
 JSPP.SpaceProfilePanelCreateTitle = Anwender der Rolle festlegen
-JSPP.SpaceProfilePanelModifyTitle = Anwender der Rolle \u00E4ndern
-JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle l\u00F6schen
+JSPP.SpaceProfilePanelModifyTitle = Anwender der Rolle \u00e4ndern
+JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle l\u00f6schen
 
-JSPP.ComponentPanelCreateTitle = Einen Dienst hinzuf\u00FCgen
-JSPP.ComponentPanelModifyTitle = Den Dienst \u00E4ndern
-JSPP.ComponentPanelDeleteTitle = Den Dienst l\u00F6schen
+JSPP.ComponentPanelCreateTitle = Einen Dienst hinzuf\u00fcgen
+JSPP.ComponentPanelModifyTitle = Den Dienst \u00e4ndern
+JSPP.ComponentPanelDeleteTitle = Den Dienst l\u00f6schen
+JSPP.CopyComponent = Dienst kopieren
+JSPP.PasteComponent = Einf\u00fcgen
 
 JSPP.SubSpacePanelCreateTitle = Einen Unter-Bereich erstellen
 JSPP.SpacePanelCreateTitle = Einen Bereich erstellen
-JSPP.SpacePanelModifyTitle = Der Bereich \u00E4ndern
-JSPP.SpacePanelDeleteTitle = Der Bereich l\u00F6schen
+JSPP.SpacePanelModifyTitle = Bereich \u00e4ndern
+JSPP.SpacePanelDeleteTitle = Bereich l\u00f6schen
 
-JSPP.Choose = W\u00E4hlen Sie...
-JSPP.ModifyStartPage = Startseite \u00E4ndern
+JSPP.Choose = W\u00e4hlen Sie...
+JSPP.ModifyStartPage = Startseite \u00e4ndern
 
 //form
 JSPP.creationSpace = Bereicherstellung
 JSPP.creationSubSpace = Unter-Bereich-Erstellung
-JSPP.updateSpace = Bereich\u00E4nderung
-JSPP.creationInstance = Einen Dienst hinzuf\u00FCgen
+JSPP.updateSpace = Bereich\u00e4nderung
+JSPP.creationInstance = Einen Dienst hinzuf\u00fcgen
 JSPP.roleDescription = Beschreibung der Rolle
 
 //erreurs
 MustContainsText = muss eingegeben werden
-ThisFormContains = Achtung, dieses Formular enth\u00E4lt
-ContainsTooLargeText = darf nicht \u00FCbersteigen
+ThisFormContains = Achtung, dieses Formular enth\u00e4lt 
+ContainsTooLargeText = darf nicht \u00fcbersteigen 
 NbMaxTextArea = 2000 
 Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
 //messages
-JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00F6schen zu wollen?\\n\\n-->
-JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer l\u00F6schen zu wollen?
-JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00F6schen zu wollen?\\n\\n-->
-JSPP.MessageSuppressionInstanceEnd = <--\\n
+JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00f6schen zu wollen?\\n\\n--\u003E
+JSPP.MessageSuppressionSpaceEnd = \u003C-\\n
+JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer l\u00f6schen zu wollen?
+JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00f6schen zu wollen?\\n\\n--\u003E
+JSPP.MessageSuppressionInstanceEnd = \u003C--\\n
 
 //onglets roles
 JSPP.Manager = Bereich Verwalter 
@@ -110,12 +112,21 @@ JSPP.PlaceLast = Verschieben am Ende
 JSPP.ComponentOrder = Verschiebung des Dienstes
 JSPP.ComponentPlace = Verschiebung vor die Komponente
 
+// position espace, composant
+JSPP.SpacePosition = Dienste anzeigen
+JSPP.NoSpacePosition = W\u00e4hlen Sie die Position
+JSPP.SpacePositionFirst = Nach den Unterr\u00e4umen
+JSPP.SpacePositionLast = Vor den Unterr\u00e4umen
+
 // Deplacement de composant
 JSPP.SpaceIn = Verschiebung in dem Bereich
-JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich m\u00FCssen sich in Wartung befinden...
+JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich m\u00fcssen sich in Wartung befinden...
 JSPP.MessageConfirmMovingComponentInSpace = Sind Sie sicher, diese Komponente in diesem Bereich verschieben zu wollen?
-JSPP.ExistingComponentName = Verschiebung unm\u00F6glich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
-JSPP.movingInProgress = Verschiebung l\u00E4uft...
+JSPP.ExistingComponentName = Verschiebung unm\u00f6glich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
+JSPP.movingInProgress = Verschiebung l\u00e4uft...
+
+// Copy/Cut/Paste component
+JSPP.CopyOf = Kopie von
 
 //Sauvegarde
 JSPP.BackupUnlimited = Sichern/Wiederherstellen von Komponenten
@@ -123,30 +134,30 @@ JSPP.BackupSpace = Komponenten des Bereichs sichern/wiederherstellen
 
 JSPP.ErrorComponentCreation = Fehler bei der Erstellung der Komponente
 JSPP.ErrorComponentUpdate = Fehler bei der \u00C4nderung der Komponente
-JSPP.ErrorComponentMessage = \u00DCberpr\u00FCfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
+JSPP.ErrorComponentMessage = \u00DCberpr\u00fcfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
 JSPP.ErrorSpaceCreation = Fehler bei der Erstellung des Bereichs
 JSPP.ErrorSpaceUpdate = Fehler bei der \u00C4nderung des Bereichs
-JSPP.ErrorSpaceMessage = \u00DCberpr\u00FCfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
+JSPP.ErrorSpaceMessage = \u00DCberpr\u00fcfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
 
 //Corbeille
-JSPP.Bin = R\u00E4ume- und Komponenten-Korb
-JSPP.BinRemoveDate = L\u00F6schdatum
+JSPP.Bin = R\u00e4ume- und Komponenten-Korb
+JSPP.BinRemoveDate = L\u00f6schdatum
 JSPP.BinRestore = Wiederherstellen
-JSPP.BinRestoreSelected = Sind Sie sicher, die gew\u00E4hlten Elemente wiederherstellen zu wollen?
-JSPP.BinDelete = Definitiv l\u00F6schen
+JSPP.BinRestoreSelected = Sind Sie sicher, die gew\u00e4hlten Elemente wiederherstellen zu wollen?
+JSPP.BinDelete = Definitiv l\u00f6schen
 JSPP.BinEmpty = Der Korb ist leer!
-JSPP.BinDeleteConfirm = Sind Sie sicher, dieses Element und seinen gesamten Inhalt definitiv l\u00F6schen zu wollen?
-JSPP.BinDeleteConfirmSelected = Sind Sie sicher, die gew\u00E4hlten Elemente und ihren gesamten Inhalt definitiv l\u00F6schen zu wollen?
+JSPP.BinDeleteConfirm = Sind Sie sicher, dieses Element und seinen gesamten Inhalt definitiv l\u00f6schen zu wollen?
+JSPP.BinDeleteConfirmSelected = Sind Sie sicher, die gew\u00e4hlten Elemente und ihren gesamten Inhalt definitiv l\u00f6schen zu wollen?
 
-JSPP.publicComponent = \u00D6ffentlicher Zugang
-JSPP.hiddenComponent = Unsichtabr
+JSPP.publicComponent = &Ouml;ffentlicher Zugang
+JSPP.hiddenComponent = Unsichtbar
 JSPP.inheritanceBlockedComponent = Erbe der Rechte
 JSPP.localRights = Spezifische Rechte
 JSPP.inheritedRights = Ererbte Rechte
 
-JSPP.inheritanceSpaceNotUsed = Dieser Sekond\u00E4rbereich erbt nicht die Rechte des Bereichs.
+JSPP.inheritanceSpaceNotUsed = Dieser Sekond\u00e4rbereich erbt nicht die Rechte des Bereichs.
 JSPP.inheritanceComponentNotUsed = Dieses Komponent erbt nicht die Rechte des Bereichs.
-JSPP.inheritanceSpaceUsed = Dieser Sekond\u00E4rbereich erbt die Rechte des Bereichs.
+JSPP.inheritanceSpaceUsed = Dieser Sekond\u00e4rbereich erbt die Rechte des Bereichs.
 JSPP.inheritanceComponentUsed = Dieses Komponent erbt die Rechte des Bereichs.
 JSPP.click = Hier
 JSPP.here = anclicken
@@ -156,6 +167,8 @@ JSPP.inheritanceToUse = um die Rechte des Bereichs zu benutzen.
 JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
-JSPP.parameters = Parameter
 
-JSPP.SpaceHomepage.URL.help = Several values are possible for the <b>URL</b> field : <ul><li>Absolute address. Example : http://www.google.com</li><li>Internal address. Example : /admin/jsp/page.jsp (do not specify the web context /silverpeas)</li><li>Internal address into another web application. Example : <b>$</b>/weblib/pages/page.jsp (start with $/<web_application_name>)</li></ul>
+JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten... 	  	 
+JSPP.parameters = Einstellungen 	  	 
+  	  	 
+JSPP.SpaceHomepage.URL.help = Mehrere Werte sind f\u00fcr das <b>URL</b>-Feld m\u00f6glich: <ul><li>Absolut Pfad. Beispiel: http://www.google.com</li><li>Interne Adresse. Beispiel: /admin/jsp/page.jsp (Kontext nicht angeben /silverpeas)</li><li>Interne Adresse zu einer anderen Web-Anwendung. Beispiel: <b>$</b>/weblib/pages/page.jsp (Beginnen mit $/<nom_application_web>)</li></ul>
