--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_de.properties
@@ -30,9 +30,9 @@ Service  = KM Service:
 Date     = Datum: 
 URL      = Link: 
 Axis     = Achse: 
-notification.delete.title = Ihr Interessenschwerpunkt ist gel\u00F6scht worden
-deleteOnAxisMessage = Eine Achse Ihres Interessenschwerpunktes ist gel\u00F6scht worden. Somit ist auch dieser Interesenschwerpunkt gel\u00F6scht worden.
-deleteOnValueMessage = Ein Wert Ihres Interessenschwerpunktes ist gel\u00F6scht worden. Somit ist auch dieser Interessenschwerpunkt gel\u00F6scht worden.
+notification.delete.title = Ihr Interessenschwerpunkt ist gel\u00f6scht worden
+deleteOnAxisMessage = Eine Achse Ihres Interessenschwerpunktes ist gel\u00f6scht worden. Somit ist auch dieser Interesenschwerpunkt gel\u00f6scht worden.
+deleteOnValueMessage = Ein Wert Ihres Interessenschwerpunktes ist gel\u00f6scht worden. Somit ist auch dieser Interessenschwerpunkt gel\u00f6scht worden.
 DocumentName = Dokument: 
 Path = Pfad: 
 pdcClassification = Meine Interessenschwerpunkte
