--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_de.properties
@@ -1,98 +1,1 @@
-#Connexion
-directory.connected=Connect\u00e9 depuis
-
-#Profil
-newsFeed.scope.display = Display : 
-newsFeed.scope.all = All
-newsFeed.scope.publication = Publications
-newsFeed.scope.event = Events
-newsFeed.scope.photo = Images
-newsFeed.scope.relationship = Relationship
-newsFeed.scope.status = Status
-
-profil.actions.changePhoto=Change my picture
-profil.actions.changeStatus=Change my status
-
-profil.icon.private.event=Ev\u00e9nement priv\u00e9
-
-newsFeed.getNext = Older informations
-newsFeed.inProgress = Loading in progress
-
-newsFeed.publication.updated.true=have updated the publication
-newsFeed.publication.updated.false=have created the publication
-newsFeed.photo.updated.true=have updated the image
-newsFeed.photo.updated.false=have created the image
-newsFeed.event.label=will participate to the event 
-newsFeed.lastevent.label= have participated to the event
-newsFeed.status.suffix=have changed his status 
-newsFeed.relationShip.label = have added * to his network at  
-
-myProfile.UserRights = Rights
-myProfile.OldPassword = Old password
-myProfile.NewPassword = New password
-myProfile.NewPasswordConfirm = Confirm new password 
-myProfile.WrongNewPwd = Wrong password confirmation...
-myProfile.MessageOK = Your profile has been successfully updated...
-myProfile.Error_bad_credential = Bad credentials, try again...
-myProfile.Error_unknown = Unable to update your profile, please contact your Administrator
-myProfile.ModifyPasswordNotAllowed1 = You are not allowed to modify your password here.
-myProfile.ModifyPasswordNotAllowed2 = Contact your Administrator...
-myProfile.LengthPwdLabel = minimum characters 
-myProfile.WrongLength = Incorrect password length!
-myProfile.NoSpacesInPassword = The password must not contain any blank spaces!
-myProfile.LoginQuestion = Question if password has been forgotten
-myProfile.LoginAnswer = Answer to the question
-
-myProfile.settings.FavoriteLanguage = Language
-myProfile.settings.language_fr = French
-myProfile.settings.language_de = Deutsch
-myProfile.settings.language_en = English
-myProfile.settings.FavoriteLook = Look
-myProfile.settings.DefaultWorkSpace = Default space
-myProfile.settings.Thesaurus = Enable thesaurus
-myProfile.settings.DragDrop = Enable drag n' drop
-myProfile.settings.WebdavEditing = Enable online edition
-myProfile.settings.ChangeLookAlert = The selected look will only be applied to spaces with no set look
-myProfile.settings.DEFAULT=Use by default
-myProfile.settings.DISABLE=Do not use
-myProfile.settings.ALL=Use "All spaces" tab by default
-myProfile.settings.BOOKMARKS=Use "Favorites" tab by default
-myProfile.settings.menuDisplay=Favorite spaces
-
-myProfile.tab.feed = News feed
-myProfile.tab.wall = Wall
-myProfile.tab.profile = Profile
-myProfile.tab.settings = Settings
-myProfile.tab.invitations = Invitations
-
-myProfile.invitations.received = Received
-myProfile.invitations.sent = Sent
-myProfile.invitations.cancel = Uninvite
-myProfile.invitations.accept = Accept the invitation
-myProfile.invitations.ignore = Ignore the invitation
-myProfile.invitations.date = Date of the invitation : 
-
-myProfile.invitations.outbox.empty = You have no pending invitation
-myProfile.invitations.inbox.empty = You do not receive an invitation
-
-myProfile.invitations.dialog.cancel.title = Uninvite ?
-myProfile.invitations.dialog.cancel.message = Are you sure you want to cancel the invitation sent to
-myProfile.invitations.dialog.accept.title = Accept the invitation ?
-myProfile.invitations.dialog.accept.message = Are you sure you want to accept the invitation of
-myProfile.invitations.dialog.ignore.title = Ignore the invitation ?
-myProfile.invitations.dialog.ignore.message = Are you sure you want to ignore the invitation of
-
-myProfile.invitations.notification.send.subject= You have received a new invitation
-myProfile.invitations.notification.accept.subject= has accepted your invitation.
-
-myProfile.contacts = contacts
-myProfile.contacts.all = Display all...
-
-myContactProfile.tab.profile = Profile
-myContactProfile.tab.wall = Wall
-myContactProfile.contacts.common = common contacts
-
-profil.subnav.display=Display\:
-profil.subnav.identity=Identity
-
-invitation.send = Schicken Sie eine Einladung
+## Copyright (C) 2000 - 2009 Silverpeas## This program is free software: you can redistribute it and/or modify# it under the terms of the GNU Affero General Public License as# published by the Free Software Foundation, either version 3 of the# License, or (at your option) any later version.## As a special exception to the terms and conditions of version 3.0 of# the GPL, you may redistribute this Program in connection with Free/Libre# Open Source Software ("FLOSS") applications as described in Silverpeas's# FLOSS exception.  You should have received a copy of the text describing# the FLOSS exception, and it is also available here:# "http://repository.silverpeas.com/legal/licensing"## This program is distributed in the hope that it will be useful,# but WITHOUT ANY WARRANTY; without even the implied warranty of# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the# GNU Affero General Public License for more details.## You should have received a copy of the GNU Affero General Public License# along with this program.  If not, see <http://www.gnu.org/licenses/>.##Connexion directory.connected=Verbunden seit#ProfilnewsFeed.scope.display = Anzeigen :newsFeed.scope.all = AllenewsFeed.scope.publication = Ver\u00f6ffentlichungennewsFeed.scope.event = EreignissenewsFeed.scope.photo = BildernewsFeed.scope.relationship = VerbindungennewsFeed.scope.status = Statutsprofil.actions.changePhoto=Mein Bild \u00e4ndernprofil.actions.changeStatus=Mein Status \u00e4ndernprofil.icon.private.event=Privates EreignisnewsFeed.getNext = \u00C4ltere InformationennewsFeed.inProgress = Wird geladennewsFeed.publication.updated.true=hat die Ver\u00f6ffentlichung ge\u00e4ndertnewsFeed.publication.updated.false=hat die Ver\u00f6ffentlichung erstelltnewsFeed.photo.updated.true=hat das Bild ge&#x00e4;ndertnewsFeed.photo.updated.false=hat das Bild ver\u00f6ffentlichtnewsFeed.event.label=wird am Ereignis teilnehmennewsFeed.lastevent.label= hat am Ereignis teilgenommennewsFeed.status.suffix=hat seinen Status ver&#x00e4;ndert newsFeed.relationShip.label = Hat * zu seinem Netz in hinzugef\u00fcgtmyProfile.UserRights = RechtemyProfile.OldPassword = Altes PasswortmyProfile.NewPassword = Neues PasswortmyProfile.NewPasswordConfirm = Neues Passwort best&#x00e4;tigenmyProfile.WrongNewPwd = Falsche Passwort Best&#x00e4;tigung...myProfile.MessageOK = Ihr Profil wurde erfolgreich aktualisiert...myProfile.Error_bad_credential = Ihr Kennwort ist inkorrektmyProfile.Error_unknown = Unm\u00f6glich, Ihr Profil zu aktualisieren, wenden Sie sich bitte an Ihren Administrator,myProfile.ModifyPasswordNotAllowed1 = Sie k\u00f6nnen Ihr Kennwort hier nicht &#x00e4;ndern.myProfile.ModifyPasswordNotAllowed2 = Kontaktieren Sie Ihren Administrator...myProfile.LengthPwdLabel = Minimale ZeichenanzahlmyProfile.WrongLength = Die L&#x00e4;nge des Kennwortes ist ungen\u00fcgend!myProfile.NoSpacesInPassword = Das Passwort darf keine Leerzeichen enthalten!myProfile.LoginQuestion = Frage im Falle dass Sie Ihr Kennwort VergessenmyProfile.LoginAnswer = Antwort auf die FragemyProfile.settings.FavoriteLanguage = SprachemyProfile.settings.language_fr = Franz&#x00f6;sischmyProfile.settings.language_de = DeutschmyProfile.settings.language_en = EnglischmyProfile.settings.FavoriteLook = AussehenmyProfile.settings.DefaultWorkSpace = Standard RaummyProfile.settings.Thesaurus = Den Thesaurus aktivierenmyProfile.settings.DragDrop = Drag and Drop aktivierenmyProfile.settings.WebdavEditing = Die on-line Bearbeitung aktivierenmyProfile.settings.ChangeLookAlert = Die ausgew&#x00e4;hlten Looks werden nur R&#x00e4;ume mit keinen festen Look angewandt werdenmyProfile.settings.DEFAULT=Als Standard ben\u00fctzenmyProfile.settings.ALL=Ben&#x00fc;tzen Sie "Alle" Tab standardm&#x00e4;\u00dfigmyProfile.settings.BOOKMARKS=Ben&#x00fc;tzen Sie "Favoriten&#34; Tab standardm&#x00e4;\u00dfigmyProfile.settings.DISABLE=Nicht ben&#x00fc;tzenmyProfile.settings.menuDisplay=Lieblingsr&#x00e4;umemyProfile.tab.feed = InformationsfadenmyProfile.tab.wall = WandmyProfile.tab.profile = ProfilmyProfile.tab.settings = VoreinstellungenmyProfile.tab.invitations = EinladungenmyProfile.invitations.received = BekommenmyProfile.invitations.sent = GesendetmyProfile.invitations.cancel = Einladungen aufhebenmyProfile.invitations.accept = Einladungen annehmenmyProfile.invitations.ignore = Einladungen ignorierenmyProfile.invitations.date = Datum der Einladung:myProfile.invitations.outbox.empty = Sie haben keine offenen Einladung.myProfile.invitations.inbox.empty = Sie haben keine Einladung erhalten.myProfile.invitations.dialog.cancel.title = Einladung aufheben ?myProfile.invitations.dialog.cancel.message = Sind sie sicher die Einladung aufheben zu wollen?myProfile.invitations.dialog.accept.title = Einladung annehmen ?myProfile.invitations.dialog.accept.message = Sind sie sicher die Einladung annehmen zu wollen?myProfile.invitations.dialog.ignore.title = Einladung ignorieren ?myProfile.invitations.dialog.ignore.message = Sind sie sicher diese Einladung ignorieren zu wollen? :myProfile.invitations.notification.send.subject= You have received a new invitationmyProfile.invitations.notification.accept.subject= has accepted your invitation.myProfile.contacts = KontaktemyProfile.contacts.all = Alles/Alle anzeigen...myContactProfile.tab.profile = ProfilmyContactProfile.tab.wall = WandmyContactProfile.contacts.common = Gemeinsame Kontakteinvitation.send = Eine Einladung sendenprofil.subnav.display=Anzeigen\:profil.subnav.identity=Identit&#x00e4;t
