--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -30,8 +30,8 @@ pdcPeas.createAxis                     = Eine Achse erstellen
 pdcPeas.viewAxis                       = Die Achse sehen
 pdcPeas.editAxis                       = Die Achse bearbeiten
 pdcPeas.editValue                      = Den Wert bearbeiten
-pdcPeas.updateValue                    = Den Wert \u00E4ndern
-pdcPeas.moveValue                      = Den Wert verschieben
+pdcPeas.updateValue                    = Den Wert \u00e4ndern
+dcPeas.moveValue                      = Den Wert verschieben
 pdcPeas.editRights                     = Dire Rechte verwalten
 pdcPeas.noRight 		       	 	   = Sie haben keine Rechte auf dieser Achse.
 
@@ -41,20 +41,21 @@ pdcPeas.motherValue                    = Mutterwert
 pdcPeas.currentValue                   = Aktueller Wert
 pdcPeas.baseValue                      = Basiswert
 pdcPeas.axisValue                      = Werte der Achse
-pdcPeas.sistersValue                   = Werte s&#156;urs
+pdcPeas.sistersValue                   = Bruder-Werte
 
 pdcPeas.allAxis                        = Alle Achsen
 pdcPeas.brothersAxis                   = Bruderachse
 
-pdcPeas.deleteAxis                     = Die gew\u00E4hlten Achsen l\u00F6schen
-pdcPeas.deleteValue                    = Den Wert l\u00F6schen
-pdcPeas.deleteValueImpossibleBegin     = Der Wert kann nicht gel\u00F6scht werden, da der Schwesterwert
-pdcPeas.deleteValueImpossibleEnd       = denselben Namen tr\u00E4gt wie einer der Tochterwerte
-pdcPeas.deleteArbo                     = Den Pfad l\u00F6schen
+pdcPeas.deleteAxis                     = Die gew\u00e4hlten Achsen l\u00f6schen
+pdcPeas.deleteValue                    = Den Wert l\u00f6schen
+pdcPeas.deleteValueImpossibleBegin     = Der Wert kann nicht gel\u00f6scht werden, da der Schwesterwert
+pdcPeas.deleteValueImpossibleEnd       = denselben Namen tr\u00e4gt wie einer der Tochterwerte
+pdcPeas.deleteArbo                     = Den Pfad l\u00f6schen
 
-pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad l\u00F6schen zu wollen?
-pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert l\u00F6schen zu wollen?
-pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl l\u00F6schen zu wollen?
+pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad l\u00f6schen zu wollen?
+pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert l\u00f6schen zu wollen?
+pdcPeas.confirmDeletePosition          = Sind Sie sicher, die Position l\u00f6schen zu wollen?
+pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl l\u00f6schen zu wollen?
 pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enth\u00E4lt verschieben zu wollen ?
 
 pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher alle Administratoren l\u00F6schen zu wollen ?
@@ -64,17 +65,17 @@ pdcPeas.managers					   = Administratoren
 pdcPeas.managersInherited			   = Ererbte Administratoren
 
 pdcPeas.createDaughterValue            = Einen Tochterwert erstellen
-pdcPeas.insertMotherValue              = Einen Mutterwert einf\u00FCgen
+pdcPeas.insertMotherValue              = Einen Mutterwert einf\u00fcgen
 
 pdcPeas.axisUse                        = Die Achse verwenden
 pdcPeas.axisUtilizationParameter       = Die Verwendung der Achse parametrisieren
 pdcPeas.axisUse2                       = Verwendung der Achse
 pdcPeas.axisName                       = Name der Achse
 pdcPeas.axisOperation                  = Operation
-pdcPeas.primary                        = Prim\u00E4r
-pdcPeas.primaryAxis                    = Prim\u00E4rachsen
-pdcPeas.secondary                      = Sekund\u00E4r
-pdcPeas.secondaryAxis                  = Sekund\u00E4rachsen
+pdcPeas.primary                        = Prim\u00e4r
+pdcPeas.primaryAxis                    = Prim\u00e4rachsen
+pdcPeas.secondary                      = Sekund\u00e4r
+pdcPeas.secondaryAxis                  = Sekund\u00e4rachsen
 pdcPeas.activateThesaurus              = Den Thesaurus aktivieren
 pdcPeas.desactivateThesaurus           = Den Thesaurus deaktivieren
 pdcPeas.showSecondaryAxis			   = Sekondare Achsen zeigen
@@ -83,10 +84,14 @@ pdcPeas.hideSecondaryAxis			   = Sekondare Achsen Verstecken
 pdcPeas.classifyPublication            = Klassifizierung
 pdcPeas.classifyAdd                    = Erstellen einer neuen Position
 pdcPeas.classifyUpdate                 = \u00C4ndern eine Position
-pdcPeas.classifyDelete                 = Die gew\u00E4hlten Positionen l\u00F6schen
+pdcPeas.classifyDelete                 = Die gew\u00e4hlten Positionen l\u00f6schen
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = Keine Position
-pdcPeas.rootValueNotAllowed	       = Der Stammwert ist f\u00FCr die folgenden Achsen nicht gestattet
+pdcPeas.rootValueNotAllowed	       = Der Stammwert ist f\u00fcr die folgenden Achsen nicht gestattet
+pdcPeas.addPosition                    = Position hinzuf\u00fcgen
+pdcPeas.editPosition                   = Position \u00e4ndern
+pdcPeas.deletePosition                 = Position l\u00f6schen
+pdcPeas.deletedPosition                = Position gel\u00f6scht
 
 pdcPeas.path                           = Pfad
 pdcPeas.variant                        = Variante
@@ -95,7 +100,7 @@ pdcPeas.notVariants                    = Invarianten
 pdcPeas.optional                       = Fakultativ
 
 pdcPeas.axisAlreadyExist               = Eine Achse mit dem gleichen Namen gibt es bereits!
-pdcPeas.axisCantMove				   = Man kann eine Achse nicht verschieben !
+dcPeas.axisCantMove				   = Man kann eine Achse nicht verschieben !
 pdcPeas.valueAlreadyExist              = Einen Wert mit dem gleichen Namen gibt es bereits!
 pdcPeas.maximumAxisReach               = Die maximale Anzahl Achsen ist erreicht worden!
 
@@ -104,43 +109,45 @@ pdcPeas.emptyDaughterName              = Das Feld ' Tochterwert ' ist obligatori
 pdcPeas.emptyName                      = Das Feld ' Name ' ist obligatorisch
 
 pdcPeas.paramPdcPeas                   = Die Verwendung parametrisieren
-pdcPeas.paramChooseAxis                = Eine Klassierungsachse w\u00E4hlen
-pdcPeas.errorMessage                   = Ein zum gew\u00E4hlten Wert aufsteigender oder absteigender Wert ist bereits als Basiswert gew\u00E4hlt worden
-pdcPeas.positionExist                  = Sie k\u00F6nnen Ihren Basiswert nicht \u00E4ndern.
+pdcPeas.paramChooseAxis                = Eine Klassierungsachse w\u00e4hlen
+pdcPeas.selectAxis                     = W\u00e4hlen Sie Mindestens eine Achse aus.
+pdcPeas.errorMessage                   = Ein zum gew\u00e4hlten Wert aufsteigender oder absteigender Wert ist bereits als Basiswert gew\u00e4hlt worden
+pdcPeas.positionExist                  = Sie k\u00f6nnen Ihren Basiswert nicht \u00e4ndern.
 pdcPeas.paramUsedAxis		       = Parametrisierung
 pdcPeas.Errors                         = Fehler
 pdcPeas.mySearchContext                = Meine Suche
-pdcPeas.modifySearchContext            = Suche \u00E4ndern
+pdcPeas.modifySearchContext            = Suche \u00e4ndern
 pdcPeas.searchResult                   = Die Ergebnisse der Suche anzeigen
-pdcPeas.addSearchContext               = Diese Achse zum Suchkontext hinzuf\u00FCgen
-pdcPeas.supprAxisFromContext           = Die im Suchkontext gew\u00E4hlten Achsen l\u00F6schen
+pdcPeas.addSearchContext               = Diese Achse zum Suchkontext hinzuf\u00fcgen
+pdcPeas.supprAxisFromContext           = Die im Suchkontext gew\u00e4hlten Achsen l\u00f6schen
 pdcPeas.documentConsult                = das Dokument abfragen
 
 //recherche
-pdcPeas.requestSelect = Die Anforderung w\u00E4hlen:
-pdcPeas.SearchFind = Schl\u00FCsselw\u00F6rter:
+pdcPeas.requestSelect = Die Anforderung w\u00e4hlen:
+pdcPeas.SearchFind = Schl\u00fcsselw\u00f6rter:
 pdcPeas.NbResultSearch = Anzahl der anzuzeigenden Ergebnisse: 
 pdcPeas.SortResultSearch = sortiert nach :  
 pdcPeas.SortValueSearch.1 = Relevanz
 pdcPeas.SortValueSearch.2 = Titel
 pdcPeas.SortValueSearch.3 = Autor
-pdcPeas.SortValueSearch.4 = Datum
-pdcPeas.SortValueSearch.5 = Last update date
+pdcPeas.SortValueSearch.4 = Erstellungsdatum
+pdcPeas.SortValueSearch.5 = \u00C4nderungsdatum
 pdcPeas.SortValueSearch.6 = Standort
-pdcPeas.SortValueSearch.7 = Popularität
+pdcPeas.SortValueSearch.7 = Beliebtheit
 pdcPeas.DomainSelect = Bereich:
 pdcPeas.ComponentSelect = Dienst:
 pdcPeas.AuthorSelect = Herausgeber:
-pdcPeas.AfterDate = Nach dem
-pdcPeas.BeforeDate = Vor dem
+pdcPeas.CreateAfterDate = Ver\u00f6ffentlicht nach dem :
+pdcPeas.UpdateAfterDate = Ver\u00e4ndert nach dem :
+pdcPeas.BeforeDate = Und/oder vor dem
 pdcPeas.NoResult = Keine Antwort
 pdcPeas.OneResult = Eine einzige Antwort gefunden.
-pdcPeas.OneResultPage =  gefundene Antworten
+pdcPeas.OneResultPage =  gefundene Antworte
 pdcPeas.ManyResultPages =  gefundene Antworten
 pdcPeas.NextResults = Nachfolgende Antworten
 pdcPeas.PreviousResults = Vorhergehende Antworten
 pdcPeas.ResultPage = Ergebniss der Suche
-pdcPeas.ForYourQuery = f\u00FCr
+pdcPeas.ForYourQuery = f\u00fcr 
 pdcPeas.SearchPage = Suche
 pdcPeas.Score = Stichhaltigkeit
 pdcPeas.Download = Herunterl.
@@ -149,7 +156,7 @@ pdcPeas.Document = Dokument
 pdcPeas.Documents = Dokumente
 pdcPeas.Preview = Beschreibung
 pdcPeas.Domain = Standort
-pdcPeas.Attachment = Beigef\u00FCgte Datei
+pdcPeas.Attachment = Beigef\u00fcgte Datei
 
 pdcPeas.synSearchExtension = Ihre Suche ist erweitert worden auf die Synonyme von
 pdcPeas.search = Suchen
@@ -159,7 +166,7 @@ pdcPeas.searchDomain = Suchbereich
 
 pdcPeas.AllAuthors = Alle
 pdcPeas.Navigation = Navigation
-pdcPeas.requete = Schl\u00FCsselw\u00F6rter
+pdcPeas.requete = Schl\u00fcsselw\u00f6rter
 pdcPeas.typerecherche = Art der Suche
 pdcPeas.resultat = Ergebniss
 pdcPeas.reptrouve = gefundene Antworten
@@ -169,13 +176,13 @@ pdcPeas.emplacement = Standort
 pdcPeas.definition = Definition
 
 pdcPeas.glossaire_to_view = Das Glossar anzeigen
-pdcPeas.tracker_to_select = Die Auswahl best\u00E4tigen
+pdcPeas.tracker_to_select = Die Auswahl best\u00e4tigen
 
 pdcPeas.lenDescription = Die Definition ist auf 1000 Zeichen begrenzt
 
 pdcPeas.filtre = Filter
 pdcPeas.fullText = Volltext
-pdcPeas.requestSelect =  Meine Favoriten-Anforderungen:
+pdcPeas.requestSelect =  Meine Lieblingsanforderungen:
 pdcPeas.saveAsInterestCenter = Die Anforderung speichern
 
 pdcPeas.askOnce.resultTitle = Ergebnisse der Suche
@@ -188,23 +195,23 @@ pdcPeas.askOnce.Error = Keine Antwort.
 pdcSubscription.path = Meine Interessenschwerpunkte
 pdcSubscription.newSubsription = Neuer Interessenschwerpunkt
 pdcSubscription.Name = Name
-pdcSubscription.Name.NotEmpty = Das Feld 'Name' muss ausgef\u00FCllt werden
-pdcSubscription.Values.NotEmpty = W\u00E4hlen Sie bitte mindestens eine Achse
+pdcSubscription.Name.NotEmpty = Das Feld 'Name' muss ausgef\u00fcllt werden
+pdcSubscription.Values.NotEmpty = W\u00e4hlen Sie bitte mindestens eine Achse
 pdcSubscription.ok = OK
-pdcSubscription.selection = Gew\u00E4hlte Achse
+pdcSubscription.selection = Gew\u00e4hlte Achse
 
 pdcPeas.docsNumber = Anzahl Dokumente
 
-pdcPeas.PDCUtilization = Die Verwendung des PDC parametrisieren
+pdcPeas.PDCUtilization = Verwendung des KP parametrisieren
 
 fileBoxPlus.CreateNewDocument = Ein Dokument erstellen
 fileBoxPlus.AllDocuments = Alle Dokumente
 whitePages.CreateAUsercard = Ein Blatt erstellen
-whitePages.AllCards = Alle Bl\u00E4tter
+whitePages.AllCards = Alle Bl\u00e4tter
 expertLocator.CreateAUsercard = Ein Blatt erstellen
-expertLocator.AllCards = Alle Bl\u00E4tter
+expertLocator.AllCards = Alle Bl\u00e4tter
 questionReply.AriseAQuestion = Eine Frage stellen
-questionReply.AddAFAQ = Eine FAQ hinzuf\u00FCgen
+questionReply.AddAFAQ = Eine FAQ hinzuf\u00fcgen 
 questionReply.AllQuestions = Alle Fragen
 
 pdcPeas.TheField = Das Feld   
@@ -221,28 +228,28 @@ pdcPeas.helpCol1Header = <b>Verwendung der Abrundung in allen Feldern:</b>
 pdcPeas.helpCol2Header = <b>Verwendung der Boolschen Operatoren:</b>
 pdcPeas.helpCol3Header = <b>Suche einer Zeichenkette</b>
 
-pdcPeas.helpCol1Content1 = Um alle W\u00F6rter zu erhalten, die z.B. mit:
+pdcPeas.helpCol1Content1 = Um alle W\u00f6rter zu erhalten, die z.B. mit:
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = beginnen, einen Stern hinter das Wort setzen: HYDRO*
 
 pdcPeas.helpCol2Content1 = "Und" ist der implizite Operator.
 pdcPeas.helpCol2Content2 = z.B.: Hund Katze = Hund UND Katze<br>
-pdcPeas.helpCol2Content3 = Und: <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;z.B.: Hund AND Katze
-pdcPeas.helpCol2Content4 = Oder: <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;z.B.: HUND OR Katze
-pdcPeas.helpCol2Content5 = Nicht: <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Katze NOT Siamese
+pdcPeas.helpCol2Content3 = Und: <b>AND</b>\u0020\u0020\u0020&#x0020;z.B.: Hund AND Katze
+pdcPeas.helpCol2Content4 = Oder: <b>OR</b>\u0020\u0020\u0020&#x0020;z.B.: HUND OR Katze
+pdcPeas.helpCol2Content5 = Nicht: <b>NOT</b>\u0020\u0020\u0020&#x0020;Ex.: Katze NOT Siamese
 
-pdcPeas.helpCol3Content1 = Die Zeichenkette zwischen Anf\u00FChrungszeichen setzen
+pdcPeas.helpCol3Content1 = Die Zeichenkette zwischen Anf\u00fchrungszeichen setzen 
 pdcPeas.helpCol3Content2 = z.B.: "Reservation eines Saales"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
 pdcPeas.openUserPanelPeas           = Zugang zum Benutzer-Panel
 
-pdcPeas.classifyImpossible = Klassierung momentan unm\u00F6glich. Vom Administrator ist keine Klassierungsrichtung gew\u00E4hlt worden.
+pdcPeas.classifyImpossible = Klassierung momentan unm\u00f6glich. Vom Administrator ist keine Klassierungsrichtung gew\u00e4hlt worden.
 
 pdcPeas.In = in 
-pdcPeas.ToExport = Die gew\u00E4hlten Dokumente exportieren
-pdcPeas.exportPDF = Ausgew\u00E4hlte pdf Drucken
+pdcPeas.ToExport = Die gew\u00e4hlten Dokumente exportieren
+pdcPeas.exportPDF = Ausgew\u00e4hlte pdf Drucken
 
 pdcPeas.SearchResult = Ergebnisse
 pdcPeas.SearchSimple = Einfach
@@ -253,26 +260,24 @@ pdcPeas.Template = Formular
 
 pdcPeas.inProgress = Suche im gange !<br/>Bitte warten...
 
-pdcPeas.choiceForm = Sie m\u00FCssen ein Formular ausw\u00E4hlen
+pdcPeas.choiceForm = Sie m\u00fcssen ein Formular ausw\u00e4hlen
 
 pdcPeas.Axe = Achse
 
-pdcPeas.selectAll=Alles ausw\u00E4hlen
+pdcPeas.selectAll=Alles ausw\u00e4hlen
 
 # Facet group search message
-pdcPeas.group.author= Auteur
+pdcPeas.group.author= Author	  	 
 pdcPeas.group.service= Service
-
-pdcPeas.group.tooltip.enable= Click to show only '{0}' results
-pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
-
-pdcPeas.popularity = * views
-
-pdcPeas.external.search.label=External server :
-pdcPeas.external.search.unknown=External server
-pdcPeas.external.search.error=Please contact administrator. Configuration problem occured which not allowed to build external link.
-pdcPeas.error= Error
+pdcPeas.group.tooltip.enable= Klicken Sie hier um die Suche auf {0} zu verfeinern
+pdcPeas.group.tooltip.disable= Klicken Sie hier um den Suchfilter auf {0} zu l\u00f6schen
+ 
+pdcPeas.popularity = * Mal konsultiert
+pdcPeas.external.search.label=Externer Server :
+pdcPeas.external.search.unknown=Externer Server
+pdcPeas.external.search.error=Bitte kontaktieren Sie den Administrator der Website. Ein Problem mit der Konfiguration erlaubt es nicht den Link zu dieser externen Informationen zu bekommen.
+pdcPeas.error= Fehler
 
 # Label linked to pdcPeasSettings.properties
-external.search.server.1.label=My external server 1
-external.search.server.2.label=My external server 2
+external.search.server.1.label=Mein Externer Server 1
+external.search.server.2.label=Mein Externer Server 2
