--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
@@ -49,9 +49,9 @@ OnlineEditing = Modus Bearbeitung der Office-Dokumente
 WebdavEditing = Aktivieren der direkten Bearbeitung von Dokumenten mit Webdav
 WebdavEditing.installation = Installation des Webdav Online-bearbeitungs Moduls 
 
-operationPane_addadress = Einen Benachrichtigungskanal hinzuf\u00FCgen
+operationPane_addadress = Einen Benachrichtigungskanal hinzuf\u00fcgen
 operationPane_paramnotif = Die Regeln bearbeiten
-operationPane_addguideline = Eine Regel hinzuf\u00FCgen
+operationPane_addguideline = Eine Regel hinzuf\u00fcgen
 
 arrayPane_Default = Standard
 arrayPane_Nom = Kanal
@@ -60,10 +60,10 @@ arrayPane_Usage = Verwendung
 arrayPane_Adresse = Kontakt
 arrayPane_Operations = Operationen
 
-iconPane_Default = Standardm\u00E4ssig fixieren
+iconPane_Default = Standardm\u00e4ssig fixieren
 iconPane_Test = Testen
 
-browseBar_Path2 = Hinzuf\u00FCgung eines Benachrichtigungskanals
+browseBar_Path2 = Hinzuf\u00fcgung eines Benachrichtigungskanals
 browseBar_Path3 = Regeln
 browseBar_Path4 = \u00C4nderung des Benachrichtigungskanals
 
@@ -77,18 +77,17 @@ default = Standard
 
 UndefinedFavoriteSpace = Undefiniert
 
-TestPopUpExplanation = Sie haben soeben das Senden einer Benachrichtigung in ein Fenster getestet. Wenn der Test erfolgreich war, m\u00FCsste sich ein Fenster Ihres Browsers \u00F6ffnen.
+TestPopUpExplanation = Sie haben soeben das Senden einer Benachrichtigung in ein Fenster getestet. Wenn der Test erfolgreich war, m\u00fcsste sich ein Fenster Ihres Browsers \u00f6ffnen.
 TestSilverMailExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Benachrichtigungs-Box getestet. Wenn der Test erfolgreich war, sollten Sie in Ihrer Benachrichtigungs-Box eine Benachrichtigung erhalten haben.
-TestSMTPExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Mailbox getestet. Wenn der Test erfolgreich war, m\u00FCssten Sie in Ihrer externen Mailbox eine Meldung erhalten haben.
+TestSMTPExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Mailbox getestet. Wenn der Test erfolgreich war, m\u00fcssten Sie in Ihrer externen Mailbox eine Meldung erhalten haben.
 
 MesNotifications = Meine Benachrichtigungen
 ParametrerNotification = Parametrisierung
 LireNotification = Benachrichtigungs-Box
-SendedUserNotifications = 
-
+SendedUserNotifications = Benachrichtigung gesendet
 Notifier = Senden einer Benachrichtigung
-MessageSuppressionCanal = Sind Sie sicher, diesen Kanal l\u00F6schen zu wollen?
-MessageSuppressionRegle = Sind Sie sicher, diese Regel l\u00F6schen zu wollen?
+MessageSuppressionCanal = Sind Sie sicher, diesen Kanal l\u00f6schen zu wollen?
+MessageSuppressionRegle = Sind Sie sicher, diese Regel l\u00f6schen zu wollen?
 
 UserRights = Rechte
 OldPassword = Altes Passwort
@@ -104,4 +103,4 @@ LengthPwdLabel = Minimale Anzahl Zeichen
 WrongLength = Das Passwort ist nicht gen\u00FCgend lang!
 NoSpacesInPassword = Das Passwort darf keine Zwischenr\u00E4ume enthalten!
 
-PP.ChangeLookAlert = Der pers\u00F6nliche look wird nur auf die R\u00E4ume gultig sein wo de Corporate Look nicht aufgezwungen wird.
+PP.ChangeLookAlert = Der pers\u00F6nliche look wird nur auf die R\u00E4ume gultig se
