--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
@@ -28,22 +28,22 @@
 
 fixColWidth = Die Breite festlegen
 addAColumn = Eine Spalte hinzuf\u00fcgen
-saveChanges = Ihre \u00c4nderungen speichern
+saveChanges = Ihre \u00C4nderungen speichern
 revert = Zur vorhergehenden Version zur\u00fcckkehren
-colSizeFormat = Folgendes Format verwenden: "n%", "npx" oder "*"
+colSizeFormat = Folgendes Format verwenden: "n%", "npx&#34; oder &#34;*&#34;
 addToNewCol = Der neuen Spalte zuzuweisende Portlets
 addToCol = Der Spalte hinzuzuf\u00fcgende Portlets
 portlet = Portlet
 desc = Beschreibung
 
-portlet.LastPublications.title = Neuere Publikationen
-portlet.FavoriteQueries.title = Meine bevorzugten Anforderungen
-portlet.NextEvents.title = Meine n\u00e4chsten Rendezvous
-portlet.silverpeas.MyTodosPortlet.title = Meine Tasks
+portlet.LastPublications.title = Letzte Ver\u00f6ffentlichungen
+portlet.FavoriteQueries.title = Meine Lieblings-Queries
+portlet.NextEvents.title = Meine n\u00e4chsten Ereignisse
+portlet.silverpeas.MyTodosPortlet.title = Meine Aufgaben
 portlet.MyNotificationsPortlet.title = Meine Benachrichtigungen
 portlet.HelloSilverpeas.title = Willkommen
-portlet.MyBookmarks.title = Meinen Lesezeichen
-portlet.MyCheckOutFiles.title = Meine reservierten Dateien
-portlet.QuickInfos.title = Aktualit\u00e4t
+portlet.MyBookmarks.title = Meine Favoriten
+portlet.MyCheckOutFiles.title = Meine reservierte Dateien
+portlet.QuickInfos.title = Neuigkeiten
 portlet.ComponentInstance.title = Eine Komponente
 portlet.IFrame.title = IFrame
