--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -22,23 +22,22 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-
 selection.usersList          = Liste der Benutzer
 selection.fournisseursList   = Liste der Lieferanten
-selection.acheteursList      = Liste der K\u00E4ufer
+selection.acheteursList      = Liste der K\u00e4ufer
 selection.adminList          = Liste der Administratoren
 selection.genericList        = Liste der generischen Benutzer
 selection.infoList           = Liste der Informatiker
 
 selection.allUsers        = Alle Benutzer
 selection.fournisseurs    = Lieferanten
-selection.acheteurs       = K\u00E4ufer
+selection.acheteurs       = K\u00e4ufer
 selection.admin           = Administratoren
 selection.genericUsers    = Generische Benutzer
 selection.informatique    = Informatiker
 
-selection.arttitle        = Verf\u00FCgbar
-selection.artfouList      = Auswahl der hinzuzuf\u00FCgenden Artikel
+selection.arttitle        = Verf\u00fcgbar
+selection.artfouList      = Auswahl der hinzuzuf\u00fcgenden Artikel
 selection.fouCode         = Lieferanten-Code
 selection.reference       = Lieferanten-Referenz
 selection.artid           = Generische Referenz
