--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
@@ -26,7 +26,7 @@ silverStatisticsPeas.ip                          = IP-Adresse
 silverStatisticsPeas.duration                    = Dauer
 silverStatisticsPeas.organisation                = Organisation
 silverStatisticsPeas.group                       = Gruppe
-silverStatisticsPeas.conseilTXT 		 = Um im Textformat (z.B. CSV) zu speichern, die Funktion 'Speichern unter...' im Men\u00FC Datei mit Text als Typ verwenden.
+silverStatisticsPeas.conseilTXT 		 = Um im Textformat (z.B. CSV) zu speichern, die Funktion 'Speichern unter...' im Men\u00fc Datei mit Text als Typ verwenden.
 silverStatisticsPeas.since                       = Ab Anfang
 silverStatisticsPeas.to                          = Bis Ende
 silverStatisticsPeas.filter                      = Filter
@@ -38,12 +38,12 @@ silverStatisticsPeas.RefreshedEveryMinutes       = Alle Minuten aktualisierte Li
 silverStatisticsPeas.CloseSession                = Sitzung schliessen
 silverStatisticsPeas.NotifyUser                  = Den Benutzer durch Popup benachrichtigen
 silverStatisticsPeas.Actions                     = Aktionen
-silverStatisticsPeas.ConfirmKickSession          = Best\u00E4tigen Sie die L\u00F6schung der Sitzung des Benutzers:
+silverStatisticsPeas.ConfirmKickSession          = Best\u00e4tigen Sie die L\u00f6schung der Sitzung des Benutzers:
 silverStatisticsPeas.durationAvg                 = Mittlere Dauer
 silverStatisticsPeas.usersWithSession		 = Angeschlossene Benutzer
 silverStatisticsPeas.notifyAllUser		 = Alle angeschlossenen Benutzer benachrichtigen
 silverStatisticsPeas.AuthorMessage		 = Meldung 
-silverStatisticsPeas.connectionFrequence         = Verbindungsh\u00E4ufigkeit
+silverStatisticsPeas.connectionFrequence         = Verbindungsh\u00e4ufigkeit
 silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Anzahl der verschiedenen angeschlossenen Benutzer
 silverStatisticsPeas.Connections 		 = Verbindungen
 silverStatisticsPeas.LoginNumber 		 = Anzahl Verbindungen
@@ -55,12 +55,12 @@ silverStatisticsPeas.InstancesNumber	 	 = Anzahl Instanzen
 silverStatisticsPeas.VolumeNumber	 	 = Verteilung der Publikationen
 silverStatisticsPeas.VolumeDocsNumber	 	 = Verteilung der Dateien
 silverStatisticsPeas.FromSpace	 	 	 = des Bereichs
-silverStatisticsPeas.AttachmentsNumber	 	 = Anzahl der beigef\u00FCgten Dateien
-silverStatisticsPeas.AttachmentsSize	 	 = Gr\u00F6sse der beigef\u00FCgten Dateien
-silverStatisticsPeas.VolumeDocsSize	 	 = Von den beigef\u00FCgten Dateien eingenommene Gr\u00F6sse
-silverStatisticsPeas.Frequence	 	 	 = H\u00E4ufigkeits-Art
-silverStatisticsPeas.AttachmentsTotalSize	 = Entwicklung der Gr\u00F6sse der beigef\u00FCgten Dateien
-silverStatisticsPeas.EvolutionAttachmentsTotalSize = Entwicklung der von den beigef\u00FCgten Dateien eingenommene Gr\u00F6sse
+silverStatisticsPeas.AttachmentsNumber	 	 = Anzahl der beigef\u00fcgten Dateien
+silverStatisticsPeas.AttachmentsSize	 	 = Gr\u00f6sse der beigef\u00fcgten Dateien
+silverStatisticsPeas.VolumeDocsSize	 	 = Von den beigef\u00fcgten Dateien eingenommene Gr\u00f6sse
+silverStatisticsPeas.Frequence	 	 	 = H\u00e4ufigkeits-Art
+silverStatisticsPeas.AttachmentsTotalSize	 = Entwicklung der Gr\u00f6sse der beigef\u00fcgten Dateien
+silverStatisticsPeas.EvolutionAttachmentsTotalSize = Entwicklung der von den beigef\u00fcgten Dateien eingenommene Gr\u00f6sse
 silverStatisticsPeas.Historique                  = Vorgeschichte
 silverStatisticsPeas.Access                  	 = Zugriff
 silverStatisticsPeas.EvolutionAccessDeb 	 = Vorgeschichte der Zugriffe
@@ -68,12 +68,12 @@ silverStatisticsPeas.EvolutionAccessSpace 	 = zum Bereich
 silverStatisticsPeas.EvolutionAccessService 	 = zum Dienst
 silverStatisticsPeas.EvolutionAccessGroup 	 = der Gruppe
 silverStatisticsPeas.EvolutionAccessUser 	 = des Benutzers
-silverStatisticsPeas.ClearUserPanelPeas 	 = Filter L\u00F6schen
+silverStatisticsPeas.ClearUserPanelPeas 	 = Filter L\u00f6schen
 silverStatisticsPeas.GraphConnections 	 	 = Grafik
-silverStatisticsPeas.For	 	 	 = f\u00FCr
+silverStatisticsPeas.For	 	 	 = f\u00fcr
 silverStatisticsPeas.January	 	 	 = Jan.
 silverStatisticsPeas.February	 	 	 = Feb.
-silverStatisticsPeas.March	 	 	 = M\u00E4rz
+silverStatisticsPeas.March	 	 	 = M\u00e4rz
 silverStatisticsPeas.April	 	 	 = Apr.
 silverStatisticsPeas.May	 	 	 = Mai
 silverStatisticsPeas.June	 	 	 = Juni
@@ -93,19 +93,25 @@ silverStatisticsPeas.In	 	 	 	 = in
 silverStatisticsPeas.Display	 	 	 = Anzeige
 silverStatisticsPeas.Volumes	 	 	 = Volumen
 
-silverStatisticsPeas.exportOptions	= Formatexport
-silverStatisticsPeas.export.option.csv=CSV
+silverStatisticsPeas.exportOptions        = Export-Optionen
+silverStatisticsPeas.export.option.csv=CSV  
 
-silverStatisticsPeas.access.space = Spaces access
-silverStatisticsPeas.access.pdc = Axis access
+silverStatisticsPeas.access.space = Zugriff zu den R\u00e4umen
+silverStatisticsPeas.access.pdc = Zugriff d\u00fcrch den Klassifizierungsplans
 
-silverStatisticsPeas.pdc.axis= Axis statistics
-silverStatisticsPeas.pdc.cross= Cross axis statistics
+silverStatisticsPeas.pdc.axis= Statistiken von Achsen
+silverStatisticsPeas.pdc.cross= Cross-Achsen Statistiken
 
-silverStatisticsPeas.pdc.th.axis= Axis
-silverStatisticsPeas.pdc.th.access= Access number
-silverStatisticsPeas.pdc.cross.axis.first=First axis
-silverStatisticsPeas.pdc.cross.axis.second=Second axis
-silverStatisticsPeas.pdc.cross.select=Select axis
-silverStatisticsPeas.pdc.error.select=Pleas select two axes
-silverStatisticsPeas.pdc.error.same=You must not select the same axis.
+silverStatisticsPeas.pdc.th.axis= Achse
+silverStatisticsPeas.pdc.th.access= Anzahl der Zugriffe
+silverStatisticsPeas.pdc.cross.axis.first=Erste Achse  
+silverStatisticsPeas.pdc.cross.axis.second=Zweite Achse
+silverStatisticsPeas.pdc.cross.select=Eine Achse ausw\u00e4hlen
+silverStatisticsPeas.pdc.error.select=W\u00e4hlen Sie bitte zwei Achsen aus.  
+silverStatisticsPeas.pdc.error.same=Sie m\u00fcssen zwei unterschiedlich ausw\u00e4hlen.
+
+
+
+
+
+
