--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
@@ -25,7 +25,7 @@
 clipboard = Zwischenspeicher
 // navigation
   accueil = Empfang
-  retour = Zur\u00FCck
+  retour = Zur\u00fcck
 // attribut
   titre = Titel
   composant = Dienst
@@ -36,22 +36,22 @@ clipboard = Zwischenspeicher
 // Presse-papier
   copier = Kopieren
   couper = Ausschneiden
-  coller = Einf\u00FCgen
-reset = L\u00F6schen
+  coller = Einf\u00fcgen
+reset = L\u00f6schen
   fermer = Schliessen
-ouvrir = \u00D6ffnen
+ouvrir = &Ouml;ffnen
 // actions
-  supprimer = L\u00F6schen
+  supprimer = L\u00f6schen
   valider = OK
   annuler = Abbrechen
   creation = Erstellen einer QuickInfo
   edition = \u00C4ndern
-  suppression = L\u00F6schen
+  suppression = L\u00f6schen
 //confirmation
-supprimerQIConfirmation = Sind Sie sicher, die QuickInfo l\u00F6schen zu wollen?
+supprimerQIConfirmation = Sind Sie sicher, die QuickInfo l\u00f6schen zu wollen?
 // erreurs
 titreObligatoire = Die QuickInfo kann nicht erstellt werden: Den Namen angeben
 dateDebutAvantDateFin = Die QuickInfo kann nicht erstellt werden: Das Anfangsdatum muss vor dem Enddatum liegen
-  pasteError = Einf\u00FCgen unm\u00F6glich
-  copyError = Kopieren unm\u00F6glich
+  pasteError = Einf\u00fcgen unm\u00f6glich
+  copyError = Kopieren unm\u00f6glich
 vide =
