--- a/web-core/src/test/resources/com/stratelia/webactiv/util/date/multilang/date_de.properties
+++ b/web-core/src/test/resources/com/stratelia/webactiv/util/date/multilang/date_de.properties
@@ -23,8 +23,8 @@
 #
 
 // format
-dateInputFormat = dd/MM/yyyy
-dateOutputFormat = dd/MM/yyyy
+dateInputFormat = dd.MM.yyyy
+dateOutputFormat = dd.MM.yyyy
 hourOutputFormat = HH:mm
 
 // jour
@@ -50,7 +50,7 @@ hourOutputFormat = HH:mm
 
   mois0 = Januar
   mois1 = Febraur
-  mois2 = M\u00E4rz
+  mois2 = M\u00e4rz
   mois3 = April
   mois4 = Mai
   mois5 = Juni
